[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "finance-bot"
version = "1.0.0"
description = "Telegram Finance Bot"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "20.7"
pandas = "1.5.3"
matplotlib = "3.7.0"
psycopg2-binary = "2.9.7"
pytesseract = "0.3.10"
Pillow = "10.0.0"
SpeechRecognition = "3.10.0"
vosk = "0.3.45"
openpyxl = "3.1.2"
python-dotenv = "1.0.0"
gunicorn = "21.2.0"
flask = "2.3.3"

[tool.poetry.scripts]
bot = "bot:main"
